--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "bootstrap": "^4.4.1",
     "emailjs-com": "^2.4.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^7.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-copy-to-clipboard": "^5.0.2",
@@ -21,7 +21,7 @@
     "react-particles-js": "^2.7.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^5.0.1",
     "react-smooth": "^1.0.5",
     "react-spinners": "^0.9.0",
     "react-toasts": "^3.0.6",
